--- a/blog_app/package.json
+++ b/blog_app/package.json
@@ -8,12 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
-    "gray-matter": "^4.0.3",
+    "bcryptjs": "^2.4.3",
+    "gray-matter": "^4.0.2",
     "mongodb": "^4.8.0",
     "next": "10.0.6",
+    "next-auth": "3.29.8",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-markdown": "^6.0.3",
-    "react-syntax-highlighter": "^15.5.0"
+    "react-markdown": "^6.0.0",
+    "react-syntax-highlighter": "^15.4.3"
   }
 }
